crates/plotnik-tests/tests/03-analyze/ref_resolution/undefined_reference.txt
Call = (call_expression function: (Undefined))
------------------ DIAGNOSTICS -------------------
error: `Undefined` is not defined
 --> query.ptk:1:36
  |
1 | Call = (call_expression function: (Undefined))
  |                                    ^^^^^^^^^
  |
help: define `Undefined` before using `(Undefined)`, or change the reference to an existing definition
-------------------- SYMBOLS ---------------------
Call
  Undefined?
